--- a/index.html
+++ b/index.html
@@ -3973,7 +3973,7 @@
                     <p>who got a total of:</p>
                   </div>
                   <div>
-                    <p class="kpts ms-auto">24pts</p>
+                    <p class="kpts ms-auto">31pts</p>
                   </div>
                 </div>
               </div>
@@ -3989,7 +3989,7 @@
                     <p>who got a total of:</p>
                   </div>
                   <div>
-                    <p class="kpts ms-auto">24pts</p>
+                    <p class="kpts ms-auto">31pts</p>
                   </div>
                 </div>
               </div>
@@ -4037,7 +4037,7 @@
               <div class="col-lg-6">
                 <div class="row">
                   <div class="col-lg-6">
-                    <p class="scorerK">Aro @DeeAy</p>
+                    <p class="scorerK">Okafo @richardken</p>
                   </div>
                   <div class="col-lg-6">
                     <p>Predicted the following scorers(and got points for them):</p>
@@ -4140,7 +4140,7 @@
           </tr>
 
           <tr>
-            <th><i class="fa-solid fa-arrow-up-right" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week!"></i></th>
+            <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week!"></i></th>
             <th scope="row">4</th>
             <td>Tabansi</td>
             <td>@Atlas</td>
@@ -4166,7 +4166,7 @@
             <td>39</td>
           </tr>
           <tr>
-            <th><i class="fa-solid fa-arrow-down-left" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week."></i></th>
+            <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week."></i></th>
             <th scope="row">7</th>
             <td>Komori</td>
             <td>@TheOperator</td>
@@ -4179,7 +4179,7 @@
             <td>35</td>
           </tr>
           <tr>
-            <th><i class="fa-solid fa-arrow-up-right" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
+            <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
             <th scope="row">8</th>
             <td>Alex</td>
             <td>@RaheemD'Or</td>
@@ -4193,7 +4193,7 @@
           </tr>
 
           <tr>
-            <th><i class="fa-solid fa-arrow-down-left" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
+            <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
             <th scope="row">9</th>
             <td>Zino</td>
             <td>@odogwu</td>
