--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body" style="background-color: #481380; color: white;">
               <h1>GW3'S Predictions</h1>
               <div class="row">
 
@@ -1831,7 +1831,7 @@
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body" style"  background-color: #481380; color: white;">
 
               <div class="row">
 
@@ -4016,12 +4016,12 @@
           <div class="col-lg-12 ms-auto shadow p-3 mb-5 bg-body rounded honor">
 
             <h3 class="sco">Most Scorers Predicted</h3>
-            <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
             <br>
             <div class="row">
               <div class="col-lg-6">
                 <div class="row">
                   <div class="col-lg-6">
+                    <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
                     <p class="scorerK">Aro @DeeAy</p>
                   </div>
                   <div class="col-lg-6">
@@ -4037,6 +4037,7 @@
               <div class="col-lg-6">
                 <div class="row">
                   <div class="col-lg-6">
+                    <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
                     <p class="scorerK">Okafo @richardken</p>
                   </div>
                   <div class="col-lg-6">
@@ -4132,7 +4133,7 @@
             <td>@primeAik</td>
             <td>7</td>
             <td>5</td>
-            <td>50</td>
+            <td>5</td>
             <td>6</td>
             <td>23</td>
             <td>17</td>
