--- a/index.html
+++ b/index.html
@@ -5480,45 +5480,13 @@
             <h3 class="king">Kings Of The Gameweek</h3>
 
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-lg-12">
                 <div class="vstack gap-1">
                   <div class="">
                     <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
                   </div>
                   <div>
-                    <p class="K ms-auto">Aro @DeeAy</p>
-                  </div>
-                  <div>
-                    <p>who got a total of:</p>
-                  </div>
-                  <div>
-                    <p class="kpts ms-auto">31pts</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="vstack gap-1">
-                  <div class="">
-                    <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
-                  </div>
-                  <div>
-                    <p class="K ms-auto">Divine @hayzaydee</p>
-                  </div>
-                  <div>
-                    <p>who got a total of:</p>
-                  </div>
-                  <div>
-                    <p class="kpts ms-auto">31pts</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="vstack gap-1">
-                  <div class="">
-                    <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
-                  </div>
-                  <div>
-                    <p class="K ms-auto">Okafo @richardken</p>
+                    <p class="K ms-auto">Tareek @spurswinsprem</p>
                   </div>
                   <div>
                     <p>who got a total of:</p>
@@ -5529,48 +5497,6 @@
                 </div>
               </div>
             </div>
-
-          </div>
-
-          <div class="col-lg-12 ms-auto shadow p-3 mb-5 bg-body rounded honor">
-
-            <h3 class="sco">Most Scorers Predicted</h3>
-            <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
-            <br>
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <p class="scorerK">Aro @DeeAy</p>
-                  </div>
-                  <div class="col-lg-6">
-                    <p>Predicted the following scorers(and got points for them):</p>
-                    <ul class="scorerlist">
-                      <li class="scorer">Haaland x2</li>
-                      <li class="scorer">Mitrovic</li>
-                      <li class="scorer">Odegaard</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <p class="scorerK">Okafo @richardken</p>
-                  </div>
-                  <div class="col-lg-6">
-                    <p>Predicted the following scorers(and got points for them):</p>
-                    <ul class="scorerlist">
-                      <li class="scorer">Sterling</li>
-                      <li class="scorer">Mitrovic</li>
-                      <li class="scorer">Haaland</li>
-                      <li class="scorer">B. Silva</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-
 
           </div>
 
@@ -5634,7 +5560,7 @@
           </tr>
 
           <tr class="table-info">
-            <th><i class="fa-solid fa-arrow-right"  data-bs-toggle="tooltip" data-bs-placement="left" title="Still 2nd position."></i></th>
+            <th><i class="fa-solid fa-arrow-down" style= "color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Still 2nd position."></i></th>
             <th scope="row">3</th>
             <td>Chizitere</td>
             <td>@SkilledGuy06</td>
@@ -5727,7 +5653,7 @@
           </tr>
 
 
-          <tr>
+          <tr class="table-danger">
             <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
             <th scope="row">9</th>
             <td>Zino</td>
@@ -5741,7 +5667,7 @@
             <td>45</td>
           </tr>
 
-          <tr >
+          <tr class="table-danger" >
             <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 3rd last week."></i></th>
             <th scope="row">11</th>
             <td>Obosi</td>
