--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p class="member">Tareek <em>@spurswinsprem</em></p>
           <p class="member">Jayden <em>@primeAik</em></p>
           <p class="member">Seerdoo <em>@loldebexx</em></p>
-          <p class="member">Jeff <em>@jeff</em></p>
+          <p class="member">Okafo <em>@richardken</em></p>
           <p class="member">Phillip <em>@ozpc</em></p>
           <p class="member">Chizitere <em>@SkilledGuy06</em></p>
           <p class="member">Adrian <em>@theunbeatables</em></p>
@@ -128,7 +128,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Last Week's Predictions (PL GW3, 2022-23 Season)
+              PL GW3, 2022-23 Season
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -1827,7 +1827,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              This Gameweek's Predictions (PL GW4, 2022-23)
+              PL GW4, 2022-23
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -3941,7 +3941,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              This Gameweek's Predictions (PL GW5, 2022-23)
+              PL GW5, 2022-23
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -5840,7 +5840,7 @@
             <td>12</td>
           </tr>
 
-          <tr>
+          <tr class="table-danger">
            <th><i class="fa-solid fa-arrow-right"></i></th>
            <th scope="row">12</th>
            <td>Phillip</td>
@@ -5853,7 +5853,7 @@
            <td>7</td>
          </tr>
 
-         <tr>
+         <tr class="table-danger">
           <th><i class="fa-solid fa-arrow-right"></i></th>
           <th scope="row">13</th>
           <td>Aro</td>
