--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p class="member">Tareek <em>@spurswinsprem</em></p>
           <p class="member">Jayden <em>@primeAik</em></p>
           <p class="member">Seerdoo <em>@loldebexx</em></p>
-          <p class="member">Okafo <em>@richardken</em></p>
+          <p class="member">Jeff <em>@jeff</em></p>
           <p class="member">Phillip <em>@ozpc</em></p>
           <p class="member">Chizitere <em>@SkilledGuy06</em></p>
           <p class="member">Adrian <em>@theunbeatables</em></p>
@@ -128,7 +128,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              PL GW3, 2022-23 Season
+              Last Week's Predictions (PL GW3, 2022-23 Season)
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -1827,7 +1827,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              PL GW4, 2022-23
+              This Gameweek's Predictions (PL GW4, 2022-23)
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -3941,7 +3941,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              PL GW5, 2022-23
+              This Gameweek's Predictions (PL GW5, 2022-23)
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -5514,7 +5514,7 @@
       <h1 class="tablehead">Rankings</h1>
       <p class="tablesub">See how the table stacks up after every gameweek.</p>
 
-      <p>Prem Predictions Standings</p>
+      <p >Prem Predictions Standings</p>
       <table class="table ">
         <thead>
           <tr>
@@ -5715,18 +5715,7 @@
             <td>31</td>
             <td>31</td>
           </tr>
-          <tr class="table-info">
-            <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 7th last week!"></i></th>
-            <th scope="row">2</th>
-            <td>Divine</td>
-            <td>@hayzaydee</td>
-            <td>0</td>
-            <td>7</td>
-            <td>6</td>
-            <td>7</td>
-            <td>20</td>
-            <td>20</td>
-          </tr>
+
 
           <tr class="table-info">
             <th><i class="fa-solid fa-arrow-right"  data-bs-toggle="tooltip" data-bs-placement="left" title="Still 2nd position."></i></th>
@@ -5740,7 +5729,7 @@
             <td>20</td>
             <td>20</td>
           </tr>
-          <tr>
+          <tr class="table-info">
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
             <th scope="row">4</th>
             <td>Alex</td>
@@ -5751,6 +5740,18 @@
             <td>9</td>
             <td>19</td>
             <td>19</td>
+          </tr>
+          <tr >
+            <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 7th last week!"></i></th>
+            <th scope="row">4</th>
+            <td>Divine</td>
+            <td>@hayzaydee</td>
+            <td>0</td>
+            <td>7</td>
+            <td>6</td>
+            <td>5</td>
+            <td>18</td>
+            <td>18</td>
           </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-right"  data-bs-toggle="tooltip" data-bs-placement="left" title="Still 4th position."></th>
@@ -5764,7 +5765,18 @@
             <td>14</td>
             <td>14</td>
           </tr>
-
+          <tr >
+            <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 3rd last week."></i></th>
+            <th scope="row">5</th>
+            <td>Okafo</td>
+            <td>@richardken</td>
+            <td>0</td>
+            <td>7</td>
+            <td>0</td>
+            <td>7</td>
+            <td>14</td>
+            <td>14</td>
+          </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week!"></i></th>
             <th scope="row">5</th>
@@ -5779,7 +5791,7 @@
           </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 9th last week!"></i></th>
-            <th scope="row">7</th>
+            <th scope="row">8</th>
             <td>Tabansi</td>
             <td>@Atlas</td>
             <td>0</td>
@@ -5791,7 +5803,7 @@
           </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
-            <th scope="row">8</th>
+            <th scope="row">9</th>
             <td>Jayden</td>
             <td>@primeAik</td>
             <td>0</td>
@@ -5803,7 +5815,7 @@
           </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week."></i></th>
-            <th scope="row">8</th>
+            <th scope="row">9</th>
             <td>Zino</td>
             <td>@odogwu</td>
             <td>0</td>
@@ -5816,7 +5828,7 @@
 
           <tr>
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
-            <th scope="row">8</th>
+            <th scope="row">9</th>
             <td>Seerdoo</td>
             <td>@loldebexx</td>
             <td>5</td>
@@ -5827,33 +5839,20 @@
             <td>12</td>
           </tr>
 
-          <tr >
-            <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 3rd last week."></i></th>
-            <th scope="row">8</th>
-            <td>Okafo</td>
-            <td>@richardken</td>
-            <td>0</td>
-            <td>5</td>
-            <td>0</td>
-            <td>7</td>
-            <td>12</td>
-            <td>12</td>
-          </tr>
-
-          <tr class="table-danger">
+          <tr>
            <th><i class="fa-solid fa-arrow-right"></i></th>
            <th scope="row">12</th>
            <td>Phillip</td>
            <td>@ozpc</td>
            <td>0</td>
-           <td>0</td>
-           <td>0</td>
+           <td>5</td>
+           <td>-1</td>
            <td>7</td>
-           <td>7</td>
-           <td>7</td>
+           <td>11</td>
+           <td>11</td>
          </tr>
 
-         <tr class="table-danger">
+         <tr>
           <th><i class="fa-solid fa-arrow-right"></i></th>
           <th scope="row">13</th>
           <td>Aro</td>
