--- a/index.html
+++ b/index.html
@@ -5731,7 +5731,7 @@
           </tr>
           <tr class="table-info">
             <th><i class="fa-solid fa-arrow-right"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
-            <th scope="row">4</th>
+            <th scope="row">3</th>
             <td>Alex</td>
             <td>@RaheemD'Or</td>
             <td>0</td>
@@ -5839,7 +5839,7 @@
             <td>12</td>
           </tr>
 
-          <tr>
+          <tr class="table-danger">
            <th><i class="fa-solid fa-arrow-right"></i></th>
            <th scope="row">12</th>
            <td>Phillip</td>
@@ -5852,7 +5852,7 @@
            <td>11</td>
          </tr>
 
-         <tr>
+         <tr class="table-danger">
           <th><i class="fa-solid fa-arrow-right"></i></th>
           <th scope="row">13</th>
           <td>Aro</td>
