--- a/index.html
+++ b/index.html
@@ -5548,10 +5548,10 @@
             <th scope="col">Position</th>
             <th scope="col">Member</th>
             <th scope="col">Username</th>
-            <th scope="col">CHE - WOL</th>
-            <th scope="col">TOT - BHA</th>
-            <th scope="col">ARS - LIV</th>
-            <th scope="col">EVE - MUN</th>
+            <th scope="col">AVL - CHE</th>
+            <th scope="col">TOT - EVE</th>
+            <th scope="col">LIV - MCI</th>
+            <th scope="col">MUN - NEW</th>
             <th scope="col">Pts This Gameweek</th>
             <th scope="col">Pts in GW4</th>
             <th scope="col">Total Points</th>
@@ -5564,16 +5564,29 @@
             <td>Chizitere</td>
             <td>@SkilledGuy06</td>
             <td>5</td>
-            <td>5</td>
-            <td>7</td>
             <td>12</td>
+            <td>0</td>
+            <td>-1<td>
+            <td>16</td>
             <td>29</td>
-            <td>21</td>
-            <td>109</td>
+            <td>125</td>
           </tr>
           <tr class="table-info">
-            <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week!"></i></th>
+            <th><i class="fa-solid fa-arrow-up"  style="color: green;"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 7th last week!"></i></th>
             <th scope="row">2</th>
+            <td>Divine</td>
+            <td>@hayzaydee</td>
+            <td>7</td>
+            <td>12</td>
+            <td>-2</td>
+            <td>-1</td>
+            <td>16</td>
+            <td>22</td>
+            <td>116</td>
+          </tr>
+          <tr class="table-info">
+            <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 5th last week!"></i></th>
+            <th scope="row">3</th>
             <td>Tabansi</td>
             <td>@Atlas</td>
             <td>5</td>
@@ -5584,48 +5597,48 @@
             <td>20</td>
             <td>107</td>
           </tr>
-          <tr class="table-info">
-            <th><i class="fa-solid fa-arrow-down"  style="color: red;"   data-bs-toggle="tooltip" data-bs-placement="left" title="Was 7th last week!"></i></th>
-            <th scope="row">3</th>
-            <td>Divine</td>
-            <td>@hayzaydee</td>
-            <td>5</td>
-            <td>0</td>
-            <td>7</td>
-            <td>10</td>
-            <td>22</td>
-            <td>15</td>
-            <td>100</td>
-          </tr>
-          <tr>
-            <th><i class="fa-solid fa-arrow-down" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
-            <th scope="row">4</th>
-            <td>Alex</td>
-            <td>@RaheemD'Or</td>
-            <td>10</td>
-            <td>0</td>
-            <td>0</td>
-            <td>5</td>
-            <td>15</td>
-            <td>11</td>
-            <td>80</td>
-          </tr>
           <tr>
             <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
-            <th scope="row">5</th>
+            <th scope="row">4</th>
             <td>Okafo</td>
             <td>@richardken</td>
             <td>5</td>
-            <td>5</td>
-            <td>0</td>
-            <td>0</td>
+            <td>12</td>
+            <td>7</td>
+            <td>3</td>
+            <td>27</td>
             <td>10</td>
-            <td>21</td>
-            <td>77</td>
+            <td>104</td>
+          </tr>
+          <tr>
+            <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 10th last week!"></i></th>
+            <th scope="row">5</th>
+            <td>Alex</td>
+            <td>@RaheemD'Or</td>
+            <td>7</td>
+            <td>0</td>
+            <td>0</td>
+            <td>5</td>
+            <td>12</td>
+            <td>15</td>
+            <td>92</td>
+          </tr>
+          <tr >
+            <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
+            <th scope="row">6</th>
+            <td>Zino</td>
+            <td>@odogwu</td>
+            <td>10</td>
+            <td>7</td>
+            <td>-1</td>
+            <td>-2</td>
+            <td>14</td>
+            <td>13</td>
+            <td>74</td>
           </tr>
           <tr >
             <th><i class="fa fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Still top of the table!"></i></th>
-            <th scope="row">6</th>
+            <th scope="row">7</th>
             <td>Aro</td>
             <td>@DeeAy</td>
             <td>0</td>
@@ -5637,8 +5650,8 @@
             <td>71</td>
           </tr>
           <tr>
-            <th><i class="fa-solid fa-arrow-right" data-bs-toggle="tooltip" data-bs-placement="left" title="Still 4th position."></th>
-            <th scope="row">7</th>
+            <th><i class="fa-solid fa-arrow-down" style="color: red;" data-bs-toggle="tooltip" data-bs-placement="left" title="Still 4th position."></th>
+            <th scope="row">8</th>
             <td>Jayden</td>
             <td>@primeAik</td>
             <td>0</td>
@@ -5649,21 +5662,9 @@
             <td>9</td>
             <td>62</td>
           </tr>
-          <tr >
-            <th><i class="fa-solid fa-arrow-up" style="color: green;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 8th last week!"></i></th>
-            <th scope="row">8</th>
-            <td>Zino</td>
-            <td>@odogwu</td>
-            <td>7</td>
-            <td>-1</td>
-            <td>0</td>
-            <td>7</td>
-            <td>13</td>
-            <td>2</td>
-            <td>60</td>
-          </tr>
+
           <tr>
-            <th><i class="fa-solid fa-arrow-down" style="color: red;"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 9th last week!"></i></th>
+            <th><i class="fa-solid fa-arrow-right"  data-bs-toggle="tooltip" data-bs-placement="left" title="Was 9th last week!"></i></th>
             <th scope="row">9</th>
             <td>Seerdoo</td>
             <td>@loldebexx</td>
