--- a/index.html
+++ b/index.html
@@ -5480,7 +5480,10 @@
             <h3 class="king">👑Kings Of The Gameweek👑</h3>
 
             <div class="row">
-              <div class="col-lg-5 col-md-12 shadow p-3 mb-5 bg-body rounded kingg1">
+              <div class="col-lg-3">
+                  <!-- Space div -->
+              </div>
+              <div class="col-lg-6 col-md-12 shadow p-3 mb-5 bg-body rounded kingg1">
                 <div class="vstack gap-1">
                   <div class="">
                     <h3>EPL</h3>
@@ -5489,38 +5492,19 @@
                     <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
                   </div>
                   <div>
-                    <p class="K ms-auto">Tabansi @Atlas</p>
+                    <p class="K ms-auto">Okafo @richardken</p>
                   </div>
                   <div>
                     <p>who got a total of:</p>
                   </div>
                   <div>
-                    <p class="kpts ms-auto">34pts</p>
+                    <p class="kpts ms-auto">27pts</p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-12">
+              <div class="col-lg-3 col-md-12">
+                  <!-- Space div -->
 
-              </div>
-              <div class="col-lg-5 col-md-12 shadow p-3 mb-5 bg-body rounded">
-                <div class="vstack gap-1">
-                  <div class="">
-                    <h3>CL</h3>
-                  </div>
-                  <div class="">
-                    <img class="user-img" src="programmer(128).png" class="carousel-img class=" user-img"" alt="...">
-                  </div>
-
-                  <div>
-                    <p class="K ms-auto">Divine @hayzaydee</p>
-                  </div>
-                  <div>
-                    <p>who got a total of:</p>
-                  </div>
-                  <div>
-                    <p class="kpts ms-auto">17pts</p>
-                  </div>
-                </div>
               </div>
             </div>
 
